force-app/main/default/objects/Court__c/fields/Respondent_disclosed_to_Disclosed_what__c.field-meta.xml
<CustomField>
    <fullName>Respondent_disclosed_to_Disclosed_what__c</fullName>
    <label>Respondent disclosed to: Disclosed what?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>