force-app/main/default/objects/Court__c/fields/Review_Comments__c.field-meta.xml
<CustomField>
    <fullName>Review_Comments__c</fullName>
    <label>Review Comments</label>
    <type>TextArea</type>
</CustomField>