force-app/main/default/objects/Court__c/fields/Scheduled_Hearing_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Hearing_Type__c</fullName>
    <label>Scheduled Hearing Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adjudication/Disposition</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Appeal Hearing</fullName>
            </value>
            <value>
                <fullName>Child Review</fullName>
            </value>
            <value>
                <fullName>Contested Adoption</fullName>
            </value>
            <value>
                <fullName>Contested CINA</fullName>
            </value>
            <value>
                <fullName>Exception Hearing</fullName>
            </value>
            <value>
                <fullName>Guardianship Motions</fullName>
            </value>
            <value>
                <fullName>Guardianship Review</fullName>
            </value>
            <value>
                <fullName>Motion Hearing(CINA)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Permanency Planning</fullName>
            </value>
            <value>
                <fullName>Permanency Plan Review</fullName>
            </value>
            <value>
                <fullName>Preliminary/Arraignment</fullName>
            </value>
            <value>
                <fullName>QRTP Review</fullName>
            </value>
            <value>
                <fullName>Reasonable Efforts Hearing</fullName>
            </value>
            <value>
                <fullName>Reunification Services Wavier</fullName>
            </value>
            <value>
                <fullName>Settlement Conference</fullName>
            </value>
            <value>
                <fullName>Shelter Care</fullName>
            </value>
            <value>
                <fullName>Status Conference</fullName>
            </value>
            <value>
                <fullName>TPR/Guardianship- Contested</fullName>
            </value>
            <value>
                <fullName>TPR/Guardianship- Uncontested</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement Hearing</fullName>
            </value>
            <value>
                <fullName>Writ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>