force-app/main/default/objects/Court__c/fields/Selected_Hearing_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Selected_Hearing_Outcome__c</fullName>
    <label>Selected Hearing Outcome</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Court orders are not signed by the judge</fullName>
            </value>
            <value>
                <fullName>Court order Received By LDSS</fullName>
            </value>
            <value>
                <fullName>The Court Order Specifies action(s) other than what was recommended</fullName>
            </value>
            <value>
                <fullName>Visitations Court Ordered</fullName>
            </value>
            <value>
                <fullName>The Court Order Specifies a placement other than what was recommended</fullName>
            </value>
            <value>
                <fullName>Services Court Orderd</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>