force-app/main/default/objects/Court__c/fields/Services_Court_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Services_Court_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Services Court Ordered</label>
    <type>Checkbox</type>
</CustomField>