force-app/main/default/objects/Court__c/fields/Services_Court_Ordered_Comments__c.field-meta.xml
<CustomField>
    <fullName>Services_Court_Ordered_Comments__c</fullName>
    <label>Services_Court_Ordered_Comments</label>
    <type>TextArea</type>
</CustomField>