force-app/main/default/objects/Court__c/fields/Sibiling_Child_Welfare_Services__c.field-meta.xml
<CustomField>
    <fullName>Sibiling_Child_Welfare_Services__c</fullName>
    <label>Child Welfare Services</label>
    <length>50</length>
    <type>Text</type>
</CustomField>