force-app/main/default/objects/Court__c/fields/Sibiling_CPS__c.field-meta.xml
<CustomField>
    <fullName>Sibiling_CPS__c</fullName>
    <label>CPS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>