force-app/main/default/objects/Court__c/fields/Sibiling_Name__c.field-meta.xml
<CustomField>
    <fullName>Sibiling_Name__c</fullName>
    <label>Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>