force-app/main/default/objects/Court__c/fields/Sibling_CINA_TPR_respondent_siblings__c.field-meta.xml
<CustomField>
    <fullName>Sibling_CINA_TPR_respondent_siblings__c</fullName>
    <label>CINA/TPR -  respondent/siblings</label>
    <length>50</length>
    <type>Text</type>
</CustomField>