force-app/main/default/objects/Court__c/fields/Subpoenaed_Address__c.field-meta.xml
<CustomField>
    <fullName>Subpoenaed_Address__c</fullName>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>