force-app/main/default/objects/Court__c/fields/Subpoenaed_Institution__c.field-meta.xml
<CustomField>
    <fullName>Subpoenaed_Institution__c</fullName>
    <label>Institution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>