force-app/main/default/objects/Court__c/fields/Subpoenaed_Name__c.field-meta.xml
<CustomField>
    <fullName>Subpoenaed_Name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>