force-app/main/default/objects/Court__c/fields/Subpoenaed_Person__c.field-meta.xml
<CustomField>
    <fullName>Subpoenaed_Person__c</fullName>
    <label>Person</label>
    <length>100</length>
    <type>Text</type>
</CustomField>