force-app/main/default/objects/Court__c/fields/Subpoenaed_Type_of_Record__c.field-meta.xml
<CustomField>
    <fullName>Subpoenaed_Type_of_Record__c</fullName>
    <label>Type of Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>