force-app/main/default/objects/Court__c/fields/The_check_mark_indicates_the_activity__c.field-meta.xml
<CustomField>
    <fullName>The_check_mark_indicates_the_activity__c</fullName>
    <inlineHelpText>The check mark indicates that the activity has been completed. All unchecked items must be completed to the close the case.</inlineHelpText>
    <label>The check mark indicates the activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Client have an open legal custody record of committed to Dss, Guardianship to Dss, Delinquency voluntary Placement Agreement, Shelter Care or Committed to Another State.</fullName>
            </value>
            <value>
                <fullName>A SAFE or SAFE-C OHR has been completed for all applicable children and the assessment has supervisory approval</fullName>
            </value>
            <value>
                <fullName>There are no incomplete MFRA&apos;s or MFIRA&apos;s pending supervisor approval</fullName>
            </value>
            <value>
                <fullName>All Safety Plans have Supervisory Approval(id appicable)</fullName>
            </value>
            <value>
                <fullName>All are persons are Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>