force-app/main/default/objects/Court__c/fields/The_child_s_relationship_to_the_Legal__c.field-meta.xml
<CustomField>
    <fullName>The_child_s_relationship_to_the_Legal__c</fullName>
    <inlineHelpText>The child&apos;s relationship to the Legal Custodian is</inlineHelpText>
    <label>The child&apos;s relationship to the Legal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>