force-app/main/default/objects/Court__c/fields/The_Court_Order_Placement_Comments__c.field-meta.xml
<CustomField>
    <fullName>The_Court_Order_Placement_Comments__c</fullName>
    <label>The_Court_Order_Placement_Comments</label>
    <type>TextArea</type>
</CustomField>