force-app/main/default/objects/Court__c/fields/The_Court_Order_Specifies_a_Placement__c.field-meta.xml
<CustomField>
    <fullName>The_Court_Order_Specifies_a_Placement__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Court Order Specifies a Placement Other than what was recommended</inlineHelpText>
    <label>The Court Order Specifies a Placement</label>
    <type>Checkbox</type>
</CustomField>