force-app/main/default/objects/Court__c/fields/The_Court_Order_Specifies_action_Comment__c.field-meta.xml
<CustomField>
    <fullName>The_Court_Order_Specifies_action_Comment__c</fullName>
    <label>The_Court_Order_Specifies_action_Comment</label>
    <type>TextArea</type>
</CustomField>