force-app/main/default/objects/Court__c/fields/The_Court_Order_Specifies_action_s__c.field-meta.xml
<CustomField>
    <fullName>The_Court_Order_Specifies_action_s__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Court Order Specifies action(s) other than what was recommended</inlineHelpText>
    <label>The Court Order Specifies action(s)</label>
    <type>Checkbox</type>
</CustomField>