force-app/main/default/objects/Court__c/fields/The_Parent_1_has_been_notified__c.field-meta.xml
<CustomField>
    <fullName>The_Parent_1_has_been_notified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The Parent 1 has been notified of this action by DSS</inlineHelpText>
    <label>The Parent 1 has been notified</label>
    <type>Checkbox</type>
</CustomField>