force-app/main/default/objects/Court__c/fields/The_Parent_2_has_been_notified__c.field-meta.xml
<CustomField>
    <fullName>The_Parent_2_has_been_notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>The Parent 2 has been notified</label>
    <type>Checkbox</type>
</CustomField>