force-app/main/default/objects/Court__c/fields/The_person_s_whom_has_had_Physical__c.field-meta.xml
<CustomField>
    <fullName>The_person_s_whom_has_had_Physical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>The person(s) whom has/had Physical</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (The person(s) whom has/had Physical)</relationshipLabel>
    <relationshipName>Petitions2</relationshipName>
    <type>Lookup</type>
</CustomField>