force-app/main/default/objects/Court__c/fields/Type_of_Petition__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Petition__c</fullName>
    <label>Type of Petition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Adult Services Petition not otherwise specified</fullName>
            </value>
            <value>
                <fullName>Amendment of Petition</fullName>
            </value>
            <value>
                <fullName>Appointment of CASA</fullName>
            </value>
            <value>
                <fullName>Appointment of Conservator</fullName>
            </value>
            <value>
                <fullName>Appointment of Guardian</fullName>
            </value>
            <value>
                <fullName>Appointment of Guardian ad Litem for Child</fullName>
            </value>
            <value>
                <fullName>Appointment of Guardian ad Litem for Client</fullName>
            </value>
            <value>
                <fullName>Appointment of Guardian ad Litem for Parent</fullName>
            </value>
            <value>
                <fullName>Child Welfare Petition, Not Otherwise Specified</fullName>
            </value>
            <value>
                <fullName>CINA</fullName>
            </value>
            <value>
                <fullName>Conservator Modication</fullName>
            </value>
            <value>
                <fullName>Contempt</fullName>
            </value>
            <value>
                <fullName>Delinquency</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Discovery from DHHR</fullName>
            </value>
            <value>
                <fullName>Discovery from Parents</fullName>
            </value>
            <value>
                <fullName>Domestic Violence</fullName>
            </value>
            <value>
                <fullName>Entry of Order</fullName>
            </value>
            <value>
                <fullName>Grand Jury Review of DHHR Record</fullName>
            </value>
            <value>
                <fullName>Guardian Modification</fullName>
            </value>
            <value>
                <fullName>Guardianship/TPR</fullName>
            </value>
            <value>
                <fullName>Immediate Custody</fullName>
            </value>
            <value>
                <fullName>Injunctive Relief</fullName>
            </value>
            <value>
                <fullName>Judicial Review</fullName>
            </value>
            <value>
                <fullName>Longterm Foster Care Placement</fullName>
            </value>
            <value>
                <fullName>Medical Examination</fullName>
            </value>
            <value>
                <fullName>Medical Petiton</fullName>
            </value>
            <value>
                <fullName>Mental Health Commitment</fullName>
            </value>
            <value>
                <fullName>Mental Health Examination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>