force-app/main/default/objects/Court__c/fields/Type_of_Placement__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Placement__c</fullName>
    <label>Type of Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>