force-app/main/default/objects/Court__c/fields/Visitations_Court_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Visitations_Court_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visitations Court Ordered</label>
    <type>Checkbox</type>
</CustomField>