force-app/main/default/objects/Court__c/fields/Voluntary_placement_is_not_in_the_besti__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_placement_is_not_in_the_besti__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Voluntary placement is not in the best interest of the child</inlineHelpText>
    <label>Voluntary placement is not in the besti</label>
    <type>Checkbox</type>
</CustomField>