force-app/main/default/objects/Court__c/fields/Voluntary_placement_the_bet_Comments__c.field-meta.xml
<CustomField>
    <fullName>Voluntary_placement_the_bet_Comments__c</fullName>
    <label>Voluntary_placement_the_bet_Comments</label>
    <type>TextArea</type>
</CustomField>