force-app/main/default/objects/Court__c/fields/Within_the_first_12_month_of_the_child_s__c.field-meta.xml
<CustomField>
    <fullName>Within_the_first_12_month_of_the_child_s__c</fullName>
    <inlineHelpText>Within the first 12 month of the child&apos;s birth, was drug treatment made available to the mother and the mother refuses the recommended level of treatment for substance use disorder, or does not successfully complete the recommended level of treatment?:</inlineHelpText>
    <label>Within the first 12 month of the child&apos;s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>