force-app/main/default/objects/Court__c/fields/Witness_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Witness_List_Name__c</fullName>
    <label>Witness Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>