force-app/main/default/objects/Court__c/fields/X10_Previous_Juvenile_Court__c.field-meta.xml
<CustomField>
    <fullName>X10_Previous_Juvenile_Court__c</fullName>
    <label>10.Previous Juvenile Court:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>