force-app/main/default/objects/Court__c/recordTypes/CINA.recordType-meta.xml
<RecordType>
    <fullName>CINA</fullName>
    <active>true</active>
    <label>CINA</label>
</RecordType>