force-app/main/default/objects/Court__c/recordTypes/Subpoenaed.recordType-meta.xml
<RecordType>
    <fullName>Subpoenaed</fullName>
    <active>true</active>
    <label>Subpoenaed</label>
</RecordType>